--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "file_metadata",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "API project for freeCodeCamp",
   "main": "server.js",
   "scripts": {
@@ -13,12 +13,12 @@
     "multer": "^1.4.4"
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/freeCodeCamp/boilerplate-project-filemetadata"
+    "url": "git+https://github.com/zc2021/filemetadata"
   },
   "keywords": [
     "node",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "author": "Zoey Carter"
 }
