--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "cors": "^2.8.5",
+    "helmet": "^5.0.2",
     "multer": "^1.4.4"
   },
-	"engines": {
+  "engines": {
     "node": "^16.13.0"
-	},
+  },
   "repository": {
     "url": "git+https://github.com/zc2021/filemetadata"
   },
